--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
-</head>
-<body>
-
-    <div id="root"></div> <!-- create a "parent" div especially for react app otherwise everything in it will be overwritten -->
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- create a "parent" div especially for react app otherwise everything in it will be overwritten -->
 
     <script src="./App.js"></script>
-</body>
+  </body>
 </html>
